# candidate-cms

./: Dockerfile  LICENSE  README.md  pyproject.toml
app/: auth.py  celery_config.py  main.py  models.py  sentry_integration.py  utils.py
app/routers/: candidate.py  user.py
tests/: test_main.py
