[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = "A FastAPI project for managing users and candidates"
authors = ["razi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
motor = "^3.6.0"
pydantic = "^2.9.2"
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"
celery = "^5.4.0"
redis = "^5.2.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.32.0"
email-validator = "^2.0.0" 
passlib = "^1.7.4"
python-multipart = "^0.0.5"
httpx = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
